# Mp3-player-poo

./: .gitignore  CHECKLIST_CONFORMIDADE.md  CMakeLists.txt  ENTREGA_FINAL.md  INSTRUCOES_GITHUB.md  README.md  RELATORIO_TECNICO_FINAL.md  STATUS_ENTREGA_ETAPA1.md  STATUS_FINAL.md  VERIFICACAO_ENTREGA.md  cli_test.cpp  comandos_github.txt  mp3_player_functional.cpp  simple_test.cpp
design/: Equalizer.h  MP3PlayerApp.h  MediaPlayer.h  README.md  Relatorio_Tecnico_Etapa1.md  Track.h  header_test.cpp  uml_class_diagram.puml  uml_diagram.md
design/header/: DirectoryScanner.h  Equalizer.h
include/: CLI.h  MP3Player.h  MP3PlayerApp.h  Playlist.h  PlaylistPersistence.h  Track.h
musicas/: LEIA-ME.txt  teste_audio.txt
src/: CLI.cpp  DirectoryScanner.cpp  Equalizer.cpp  MP3Player.cpp  MP3PlayerApp.cpp  MediaPlayer.cpp  Playlist.cpp  PlaylistPersistence.cpp  Track.cpp  main.cpp
